CParser.java
// Generated from C.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__77=1, T__76=2, T__75=3, T__74=4, T__73=5, T__72=6, T__71=7, T__70=8, 
		T__69=9, T__68=10, T__67=11, T__66=12, T__65=13, T__64=14, T__63=15, T__62=16, 
		T__61=17, T__60=18, T__59=19, T__58=20, T__57=21, T__56=22, T__55=23, 
		T__54=24, T__53=25, T__52=26, T__51=27, T__50=28, T__49=29, T__48=30, 
		T__47=31, T__46=32, T__45=33, T__44=34, T__43=35, T__42=36, T__41=37, 
		T__40=38, T__39=39, T__38=40, T__37=41, T__36=42, T__35=43, T__34=44, 
		T__33=45, T__32=46, T__31=47, T__30=48, T__29=49, T__28=50, T__27=51, 
		T__26=52, T__25=53, T__24=54, T__23=55, T__22=56, T__21=57, T__20=58, 
		T__19=59, T__18=60, T__17=61, T__16=62, T__15=63, T__14=64, T__13=65, 
		T__12=66, T__11=67, T__10=68, T__9=69, T__8=70, T__7=71, T__6=72, T__5=73, 
		T__4=74, T__3=75, T__2=76, T__1=77, T__0=78, IDENTIFIER=79, INTEGER_LITERAL=80, 
		FLOATING_LITERAL=81, CHARACTER_LITERAL=82, STRING_LITERAL=83, BOOLEAN_LITERAL=84, 
		POINTER_LITERAL=85, UDEF_LITERAL=86, WS=87, COMMENT=88, COMMENT2=89;
	public static final String[] tokenNames = {
		"<INVALID>", "'enum'", "'|='", "'while'", "'do'", "'{'", "'static'", "'/='", 
		"'='", "'>>='", "'^'", "'-='", "'return'", "'double'", "'break'", "'+='", 
		"'switch'", "'struct'", "'%='", "'('", "'!='", "'long'", "','", "'^='", 
		"'>>'", "'&&'", "'goto'", "'<'", "']'", "'~'", "'void'", "'char'", "'else'", 
		"'volatile'", "'+'", "'>='", "'++'", "'/'", "'<='", "'int'", "';'", "'float'", 
		"'}'", "'<<='", "'case'", "'?'", "'*='", "'default'", "'&='", "'&'", "'for'", 
		"'*'", "'typedef'", "'if'", "'<<'", "'||'", "'...'", "'.'", "'union'", 
		"'register'", "'continue'", "':'", "'['", "'|'", "'short'", "'auto'", 
		"'>'", "'->'", "'!'", "'unsigned'", "'const'", "'%'", "'sizeof'", "')'", 
		"'signed'", "'-'", "'=='", "'extern'", "'--'", "IDENTIFIER", "INTEGER_LITERAL", 
		"FLOATING_LITERAL", "CHARACTER_LITERAL", "STRING_LITERAL", "BOOLEAN_LITERAL", 
		"POINTER_LITERAL", "UDEF_LITERAL", "WS", "COMMENT", "COMMENT2"
	};
	public static final int
		RULE_constant = 0, RULE_integer_constant = 1, RULE_character_constant = 2, 
		RULE_floating_constant = 3, RULE_enumeration_constant = 4, RULE_declaration_specifier = 5, 
		RULE_storage_specifier = 6, RULE_declarator = 7, RULE_pointer = 8, RULE_direct_declarator = 9, 
		RULE_parameter_type_list = 10, RULE_parameter_list = 11, RULE_parameter_declaration = 12, 
		RULE_abstract_declarator = 13, RULE_direct_abstract_declarator = 14, RULE_declaration = 15, 
		RULE_init_declarator_list = 16, RULE_init_declarator = 17, RULE_initializer = 18, 
		RULE_initializer_list = 19, RULE_type_specifier = 20, RULE_type_qualifier = 21, 
		RULE_struct_or_union_specifier = 22, RULE_struct_or_union = 23, RULE_struct_declaration_statement = 24, 
		RULE_struct_declaration = 25, RULE_struct_declarator_list = 26, RULE_struct_declarator = 27, 
		RULE_enum_specifier = 28, RULE_enumerator_list = 29, RULE_enumerator = 30, 
		RULE_typedef_name = 31, RULE_constant_expression = 32, RULE_conditional_expression = 33, 
		RULE_logical_or_expression = 34, RULE_logical_and_expression = 35, RULE_inclusive_or_expression = 36, 
		RULE_exclusive_or_expression = 37, RULE_and_expression = 38, RULE_equality_expression = 39, 
		RULE_relational_expression = 40, RULE_shift_expression = 41, RULE_additive_expression = 42, 
		RULE_multiplicative_expression = 43, RULE_cast_expression = 44, RULE_type_name = 45, 
		RULE_unary_expression = 46, RULE_postfix_expression = 47, RULE_primary_expression = 48, 
		RULE_expression = 49, RULE_assignment_expression = 50, RULE_assignment_expression_list = 51, 
		RULE_compound_statement = 52, RULE_statement = 53, RULE_labeled_statement = 54, 
		RULE_declaration_statement = 55, RULE_expression_statement = 56, RULE_selection_statement = 57, 
		RULE_iteration_statement = 58, RULE_jump_statement = 59, RULE_translation_unit = 60, 
		RULE_external_declaration = 61, RULE_function_definition = 62, RULE_entrance = 63;
	public static final String[] ruleNames = {
		"constant", "integer_constant", "character_constant", "floating_constant", 
		"enumeration_constant", "declaration_specifier", "storage_specifier", 
		"declarator", "pointer", "direct_declarator", "parameter_type_list", "parameter_list", 
		"parameter_declaration", "abstract_declarator", "direct_abstract_declarator", 
		"declaration", "init_declarator_list", "init_declarator", "initializer", 
		"initializer_list", "type_specifier", "type_qualifier", "struct_or_union_specifier", 
		"struct_or_union", "struct_declaration_statement", "struct_declaration", 
		"struct_declarator_list", "struct_declarator", "enum_specifier", "enumerator_list", 
		"enumerator", "typedef_name", "constant_expression", "conditional_expression", 
		"logical_or_expression", "logical_and_expression", "inclusive_or_expression", 
		"exclusive_or_expression", "and_expression", "equality_expression", "relational_expression", 
		"shift_expression", "additive_expression", "multiplicative_expression", 
		"cast_expression", "type_name", "unary_expression", "postfix_expression", 
		"primary_expression", "expression", "assignment_expression", "assignment_expression_list", 
		"compound_statement", "statement", "labeled_statement", "declaration_statement", 
		"expression_statement", "selection_statement", "iteration_statement", 
		"jump_statement", "translation_unit", "external_declaration", "function_definition", 
		"entrance"
	};

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConstantContext extends ParserRuleContext {
		public Integer_constantContext integer_constant() {
			return getRuleContext(Integer_constantContext.class,0);
		}
		public Character_constantContext character_constant() {
			return getRuleContext(Character_constantContext.class,0);
		}
		public Enumeration_constantContext enumeration_constant() {
			return getRuleContext(Enumeration_constantContext.class,0);
		}
		public Floating_constantContext floating_constant() {
			return getRuleContext(Floating_constantContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitConstant(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_constant);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(128); integer_constant();
				}
				break;
			case CHARACTER_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(129); character_constant();
				}
				break;
			case FLOATING_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(130); floating_constant();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 4);
				{
				setState(131); enumeration_constant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_constantContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(CParser.INTEGER_LITERAL, 0); }
		public Integer_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterInteger_constant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitInteger_constant(this);
		}
	}

	public final Integer_constantContext integer_constant() throws RecognitionException {
		Integer_constantContext _localctx = new Integer_constantContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_integer_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); match(INTEGER_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Character_constantContext extends ParserRuleContext {
		public TerminalNode CHARACTER_LITERAL() { return getToken(CParser.CHARACTER_LITERAL, 0); }
		public Character_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_character_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterCharacter_constant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitCharacter_constant(this);
		}
	}

	public final Character_constantContext character_constant() throws RecognitionException {
		Character_constantContext _localctx = new Character_constantContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_character_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(CHARACTER_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Floating_constantContext extends ParserRuleContext {
		public TerminalNode FLOATING_LITERAL() { return getToken(CParser.FLOATING_LITERAL, 0); }
		public Floating_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_floating_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterFloating_constant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitFloating_constant(this);
		}
	}

	public final Floating_constantContext floating_constant() throws RecognitionException {
		Floating_constantContext _localctx = new Floating_constantContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_floating_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(FLOATING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enumeration_constantContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public Enumeration_constantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumeration_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterEnumeration_constant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitEnumeration_constant(this);
		}
	}

	public final Enumeration_constantContext enumeration_constant() throws RecognitionException {
		Enumeration_constantContext _localctx = new Enumeration_constantContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_enumeration_constant);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaration_specifierContext extends ParserRuleContext {
		public Type_qualifierContext type_qualifier() {
			return getRuleContext(Type_qualifierContext.class,0);
		}
		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class,0);
		}
		public Storage_specifierContext storage_specifier() {
			return getRuleContext(Storage_specifierContext.class,0);
		}
		public Declaration_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration_specifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDeclaration_specifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDeclaration_specifier(this);
		}
	}

	public final Declaration_specifierContext declaration_specifier() throws RecognitionException {
		Declaration_specifierContext _localctx = new Declaration_specifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration_specifier);
		try {
			setState(146);
			switch (_input.LA(1)) {
			case 6:
			case 59:
			case 65:
			case 77:
				enterOuterAlt(_localctx, 1);
				{
				setState(142); storage_specifier();
				}
				break;
			case 1:
			case 13:
			case 17:
			case 21:
			case 30:
			case 31:
			case 39:
			case 41:
			case 58:
			case 64:
			case 69:
			case 74:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(143); type_specifier();
				}
				break;
			case 33:
			case 70:
				enterOuterAlt(_localctx, 3);
				{
				setState(144); type_qualifier();
				}
				break;
			case 52:
				enterOuterAlt(_localctx, 4);
				{
				setState(145); match(52);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Storage_specifierContext extends ParserRuleContext {
		public Storage_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_storage_specifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterStorage_specifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitStorage_specifier(this);
		}
	}

	public final Storage_specifierContext storage_specifier() throws RecognitionException {
		Storage_specifierContext _localctx = new Storage_specifierContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_storage_specifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_la = _input.LA(1);
			if ( !(_la==6 || _la==59 || _la==65 || _la==77) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaratorContext extends ParserRuleContext {
		public Direct_declaratorContext direct_declarator() {
			return getRuleContext(Direct_declaratorContext.class,0);
		}
		public PointerContext pointer() {
			return getRuleContext(PointerContext.class,0);
		}
		public DeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDeclarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDeclarator(this);
		}
	}

	public final DeclaratorContext declarator() throws RecognitionException {
		DeclaratorContext _localctx = new DeclaratorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if (_la==51) {
				{
				setState(150); pointer();
				}
			}

			setState(153); direct_declarator(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PointerContext extends ParserRuleContext {
		public Type_qualifierContext type_qualifier(int i) {
			return getRuleContext(Type_qualifierContext.class,i);
		}
		public List<Type_qualifierContext> type_qualifier() {
			return getRuleContexts(Type_qualifierContext.class);
		}
		public PointerContext pointer() {
			return getRuleContext(PointerContext.class,0);
		}
		public PointerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pointer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterPointer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitPointer(this);
		}
	}

	public final PointerContext pointer() throws RecognitionException {
		PointerContext _localctx = new PointerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pointer);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(51);
			setState(159);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(156); type_qualifier();
					}
					} 
				}
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(163);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(162); pointer();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Direct_declaratorContext extends ParserRuleContext {
		public int _p;
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class,0);
		}
		public Constant_expressionContext constant_expression() {
			return getRuleContext(Constant_expressionContext.class,0);
		}
		public Direct_declaratorContext direct_declarator() {
			return getRuleContext(Direct_declaratorContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public Parameter_type_listContext parameter_type_list() {
			return getRuleContext(Parameter_type_listContext.class,0);
		}
		public Direct_declaratorContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Direct_declaratorContext(ParserRuleContext parent, int invokingState, int _p) {
			super(parent, invokingState);
			this._p = _p;
		}
		@Override public int getRuleIndex() { return RULE_direct_declarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterDirect_declarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitDirect_declarator(this);
		}
	}
